# bird

./: .eslintrc.cjs  .gitignore  .htaccess  HANDOVER.md  README.md  REPRISE.md  hig-review.md  index.html  nichoir_homepage_repackaged(2).html  nichoir_left_menu_redesign_mockup.html  nichoir_v15.html  nichoir_v16.html  package.json  pnpm-lock.yaml  rust-plan.md  tree.py  tree.txt  tsconfig.base.json  vitest.workspace.ts
.github/workflows/: ci.yml
app/: README.md  app.js  index.html  style.css
apps/demo/: next.config.ts  package.json  source-aliases.mjs  source-aliases.test.mjs  tsconfig.json
deployment/namecheap/: README.md
docs/: README.md  admin-hig.md  admin-refonte-etat.md  admin-refonte-plan.md  architecture.mmd  billing-download-process-audit.md  contact-email-plan.md  fixation-plan.md  gemini-kiss-review.md  gemini-review.md  hardening-handover.md  hardening-source-of-truth.md  hig-ux-audit-2026-06-23.md  nichoir-app-higs.md  prelaunch-quality-audit.md  refactoring-non-regression-contract.md  refactoring-plan.md  refactoring-progress-log.md  refactoring-resume-message.md  refactoring-smoke-checklist.md  reprise-installation.md  reste-a-faire.md  securizons.md
installation/: README.md  index.php
scripts/: README.md  benchmark-cut-plan.ts  build-cpanel-artifact.sh  mesh-smoke.mjs  tsconfig.json
server/: .env.example  README.md  requirements.txt
server-php/: README.md
src/: calculations.js  cut-plan.js  i18n.js  main.js  state.js  store.js  three-scene.js  translations.js
styles/: main.css
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
(+100 files in other folders)
